# clockify-to-solidtime

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.agents/skills/entity-model/: SKILL.md
.agents/skills/entity-model/references/: REFERENCE.md
.agents/skills/requirements/: SKILL.md
.agents/skills/reverse-engineer/: SKILL.md
.agents/skills/reverse-engineer/references/: stack-signals.md
.agents/skills/use-case-spec/: SKILL.md
.agents/skills/use-case-spec/references/: example.md  use-case.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
docs/: migration-design.md  requirements.md  use_cases.puml  vision.md
docs/examples/: project-task-mapping.csv
docs/solidtime/: api-1.json
docs/use_cases/: UC-001-validate-configuration.md  UC-002-compare-project-setup.md  UC-003-migrate-time-tracking-data.md  UC-004-generate-shell-completions.md
src/: api_envelope.rs  clockify.rs  compare.rs  completions.rs  config.rs  fingerprint.rs  http.rs  main.rs  mapping.rs  migrate.rs  models.rs  project_mapping.rs  solidtime.rs  validate.rs
