[package]
name = "clockify-to-solidtime"
version = "0.1.0"
edition = "2024"
description = "Migrate time-tracking data from Clockify to Solidtime via their APIs"
authors = ["Niklaus Bucher"]
license = "MIT"
repository = "https://github.com/nikbucher/clockify-to-solidtime"
readme = "README.md"
keywords = ["clockify", "solidtime", "migration", "time-tracking", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
csv = "1.3.1"
dotenvy = "0.15"
reqwest = { version = "0.12.20", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "1.1.2"

[dev-dependencies]
httpmock = "0.7.0"
tempfile = "3.20.0"
